@@ -44,3 +44,4 @@ Date: 19.02.2022
   Changes:
     - Disabled deconstruction by bots
     - Decreased collision mask to prevent collisions with SE-walls
+    - Entering an unused motor car (placed by the editor) binds it to the player
